# Hebrew-NLP-Pipeline-AnalizKadima

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  ENV_SETUP.md  KADIMA_info.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
Tasks/: Kadima.txt  Kadima_v2.md  TZ_uglublenie_funkcionala_KADIMA.md
Tasks/Источники/: analiz_dokumentacii_vs_realizacii.md  revizia.md  sravn_analiz_f0_f1.md  summary - what each block brings to the system.txt  trebovaniya_k_uglubleniyu_funkcionala.md
config/: config.cfg  config.default.yaml  config.schema.json
doc/Продуктовый анализ/10_Lilt/: ANALYSIS.md
scripts/: download_models.sh  run_label_studio.sh  setup_dev.sh
templates/: hebrew_ner.xml  hebrew_pos.xml  hebrew_term_review.xml
tests/: conftest.py  fixture_loader.py  test_config.py  test_corpus.py  test_data_layer.py  test_fixtures.py  test_ner_training.py  test_sa_data_layer.py
tests/corpus/: test_exporter.py  test_importer.py
tests/data/: ACCEPTANCE_CRITERIA.md  CHANGELOG.md  CORPUS_INDEX.csv  CORPUS_INDEX.md  COVERAGE_ANALYSIS.md  CROSS_REFERENCES.md  EXPECTATION_TYPES.md  HEURISTICS.md  MANUAL_RUNBOOK.md  POWERSHELL_RUN_EXAMPLES.md  QUALITY_REVIEW.md  README.md  SYSTEM_METHODOLOGY.md  VALIDATION_STRATEGY.md
tests/engine/: test_association_measures.py  test_canonicalizer.py  test_diacritizer.py  test_hebpipe_wrappers.py  test_morph_generator.py  test_ner_extractor.py  test_ngram_extractor.py  test_noise_classifier.py  test_np_chunker.py  test_qa_extractor.py  test_sentiment_analyzer.py  test_stt_transcriber.py  test_term_clusterer.py  test_term_extractor.py  test_transformer_component.py  test_translator.py  test_transliterator.py  test_tts_synthesizer.py
tests/integration/: test_pipeline_e2e.py
tests/kb/: test_kb_embedding.py
tests/ui/: test_annotation.py  test_generative.py  test_main_window.py
tests/validation/: test_check_engine.py  test_gold_importer.py  test_report.py
Продуктовый анализ/: KADIMA_CONCEPT.md
Продуктовый анализ/01_Sketch_Engine/: ANALYSIS.md
Продуктовый анализ/02_TermSuite/: ANALYSIS.md
Продуктовый анализ/03_spaCy/: ANALYSIS.md
Продуктовый анализ/04_Stanford_CoreNLP/: ANALYSIS.md
Продуктовый анализ/05_brat/: ANALYSIS.md
Техническое задание разработка KADIMA/00_ТЗ разработка Документации/: Техническое задание разработка KADIMA.txt
Техническое задание разработка KADIMA/01_Концепт/: SCOPE.md  VISION.md
Техническое задание разработка KADIMA/02_Продукт/: PRD.md
(+311 files in other folders)
