[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kadima"
version = "0.9.1"
description = "Hebrew NLP Corpus Pipeline — term extraction, validation, KB"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    # Config / validation
    "PyYAML>=6.0,<7",
    "pydantic>=2.6,<3",
    # NLP pipeline — transformer backbone (R-1.1)
    "spacy>=3.7,<4",
    "spacy-transformers>=1.3,<2",
    "transformers>=4.35,<5",
    # NLP utilities (R-1.5)
    "numpy>=1.26,<2.0",
    "scipy>=1.12,<2.0",
    "pandas>=2.1,<3.0",
    # Data layer — SQLAlchemy (R-2.6) + async (R-2.7)
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "aiosqlite>=0.20",
    # HTTP clients (annotation + LLM backends)
    "httpx>=0.27,<1",
    # API server
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.6,<7",
]
hebpipe = [
    "hebpipe>=0.2",
]
annotation = [
    "label-studio-sdk>=1.0",
]
ml = [
    # M13 Diacritizer
    "phonikud-onnx>=1.0.0",
    "onnxruntime>=1.15.0",
    # M14, M17, M18, M19, M20 (transformers-based)
    "transformers>=4.35,<5",
    "sentencepiece>=0.1.99",
    # M24 Keyphrase
    "yake>=0.4.8",
]
gpu = [
    "kadima[ml]",
    # M13-M20 GPU inference
    "torch>=2.0,<3",
    # M15 TTS
    "TTS>=0.22.0",
    # M16 STT
    "openai-whisper>=20231117",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.3,<1",
    "mypy>=1.8,<2",
]
all = [
    "kadima[gui,hebpipe,annotation,gpu,dev]",
]

[project.scripts]
kadima = "kadima.cli:main"

# ── Package discovery ────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["kadima*"]

# ── Tool config ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["kadima"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-x --tb=short"

[tool.coverage.run]
source = ["kadima"]
omit = ["kadima/ui/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
